k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluxgate-backend
  namespace: fluxgate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluxgate-backend
  template:
    metadata:
      labels:
        app: fluxgate-backend
    spec:
      containers:
        - name: backend
          image: keaz/flux-gate-backend:v0.0.8-alpha
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 # HTTP GraphQL
            - containerPort: 50051 # gRPC
          volumeMounts:
            - name: config-toml
              mountPath: /app/config/config.toml
              subPath: config.toml
      volumes:
        - name: config-toml
          configMap:
            name: fluxgate-backend-config
