k8s/base/edge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluxgate-edge
  namespace: fluxgate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluxgate-edge
  template:
    metadata:
      labels:
        app: fluxgate-edge
    spec:
      containers:
        - name: edge
          image: keaz/flux-gate-edge:v0.0.10-alpha-arm64
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "1000m"
          volumeMounts:
            - name: config-toml
              mountPath: /app/config/config.toml
              subPath: config.toml
      volumes:
        - name: config-toml
          configMap:
            name: fluxgate-edge-config
