k8s/base/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluxgate-ui
  namespace: fluxgate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fluxgate-ui
  template:
    metadata:
      labels:
        app: fluxgate-ui
    spec:
      containers:
        - name: ui
          image: keaz/flux-gate-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
